Fix alignment of buttons in top interests page and home page

--- a/ota/static/css/style.css
+++ b/ota/static/css/style.css
@@ -300,7 +300,7 @@ header .ribbon 		{float:right;position:absolute;top:-1px;right:-2px;z-index:2;ba
 .one-fourth.last 			{margin-right:0 !important;}
 .one-half.last 				{margin-right:0 !important;}
 .one-fourth .details 		{float:left;display:block;padding:10px 7% 15px;width:86%;height:28em;}
-.one-fourth .frontPageInterests		{float:left;display:block;padding:10px 7% 15px;width:86%;height:13em;}
+.one-fourth .frontPageInterests		{text-align: center; float:left;display:block;padding:10px 7% 15px;width:86%;height:13em;}
 .one-fourth .gradient-button	{margin:10px auto 5px;}
 .three-fourth 				{float:left;width:74.5%;margin:0 0 20px 0;}
 .three-fourth .one-fourth 	{width:31.6%;margin:0 2.4% 20px 0; height:460px;}
@@ -313,6 +313,7 @@ header .ribbon 		{float:right;position:absolute;top:-1px;right:-2px;z-index:2;ba
 .offers 				{background:url(../images/bgr/separator.jpg) 0 100% repeat-x;padding:0 0 25px;margin:20px 0;width:100%;display:inline-block;}
 .offers .details		{text-align:center;}
 .offers h4			{border-bottom:1px solid #ccc;width:100%;padding:0 0 11px;margin:0 0 10px;text-align:left;letter-spacing:-1px;}
+.frontpageoffers h4 {min-height: 3em}
 
 /*DESTINATIONS*/
 .destinations 					{background:url(../images/bgr/separator.jpg) 0 100% repeat-x;padding:0 0 25px;margin:0 0 46px;width:100%;display:inline-block;}
@@ -347,6 +348,11 @@ header .ribbon 		{float:right;position:absolute;top:-1px;right:-2px;z-index:2;ba
 .deals .details span,
 .deals .details div		{text-align:left;}
 .deals h1 				{font-size:1.8em;padding:0 0 4px;color:#083f5a;-webkit-text-shadow:none;-moz-text-shadow:none;text-shadow:none;text-align:left;display:inline-block;float:left;width:100%;}
+
+.topinterestspage h2    {float:left; min-height: 3.5em; text-align: left}
+.topinterestspage .deals p {min-height: 10em}
+.topinterestspage article {height: 48em;}
+
 .deals .stars 			{float:right;}
 .deals .address			{display:inline-block;width:80%;float:left;}
 .deals .address a 		{text-decoration:none;color:#999;}
